deploy/gitops/apps/openstack-monitoring/base/loki-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-nodeport
  namespace: monitoring
  labels:
    app: loki-nodeport
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
      nodePort: 31000
      protocol: TCP
