deploy/gitops/apps/openstack-monitoring/base/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana-healthcare.htsnov.com
      secretName: tls-secret-grafana-new
  rules:
    - host: grafana-healthcare.htsnov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: o11y-grafana
                port:
                  number: 80
