deploy/gitops/apps/openstack-monitoring/base/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus-healthcare.htsnov.com
      secretName: tls-secret-prometheus-new
  rules:
    - host: prometheus-healthcare.htsnov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: o11y-kube-prometheus-stack-prometheus
                port:
                  number: 9090
